Implement basic auth flow