@@ -22,7 +22,6 @@ import org.opensearch.rest.BytesRestResponse;
 import org.opensearch.rest.RestRequest;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -36,6 +35,7 @@ import com.wazuh.commandmanager.utils.httpclient.HttpRestClientDemo;
 
 import static org.opensearch.core.xcontent.XContentParserUtils.ensureExpectedToken;
 import static org.opensearch.rest.RestRequest.Method.POST;
+import static com.wazuh.commandmanager.utils.httpclient.HttpRestClientDemo.SECURITY_USER_AUTHENTICATE;
 
 /**
  * Handles HTTP requests to the POST {@value
@@ -65,9 +65,10 @@ public class RestPostCommandAction extends BaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.singletonList(
+        return List.of(
                 new Route(
-                        POST, String.format(Locale.ROOT, "%s", CommandManagerPlugin.COMMANDS_URI)));
+                        POST, String.format(Locale.ROOT, "%s", CommandManagerPlugin.COMMANDS_URI)),
+                new Route(POST, String.format(Locale.ROOT, "%s", SECURITY_USER_AUTHENTICATE)));
     }
 
     @Override
@@ -75,6 +76,18 @@ public class RestPostCommandAction extends BaseRestHandler {
             throws IOException {
         switch (request.method()) {
             case POST:
+                if (request.uri().contains(SECURITY_USER_AUTHENTICATE)) {
+                    log.info("Mocking M_API basic authentication");
+                    return channel -> {
+                        BytesRestResponse mockResponse =
+                                new BytesRestResponse(
+                                        RestStatus.OK,
+                                        "application/json",
+                                        "{\"data\": { \"token\": \"test-jwt-token\" } }");
+                        channel.sendResponse(mockResponse);
+                    };
+                }
+
                 return handlePost(request);
             default:
                 throw new IllegalArgumentException(
@@ -114,7 +127,8 @@ public class RestPostCommandAction extends BaseRestHandler {
                     document.toXContent(XContentFactory.jsonBuilder(), ToXContent.EMPTY_PARAMS)
                             .toString();
             SimpleHttpResponse response =
-                    HttpRestClientDemo.runWithResponse(receiverURI, payload, document.getId());
+                    HttpRestClientDemo.runWithResponse(
+                            receiverURI, payload, document.getId(), settings);
             log.info("Received response to POST request with code [{}]", response.getCode());
             log.info("Raw response:\n{}", response.getBodyText());
         } catch (Exception e) {
